--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -121,8 +121,12 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-md-12" id="webviewWrapper">
-                        <webview data-bind="attr: {src: TokenAuthUrl}"></webview>
+                    <div class="col-md-12" id="webview-wrapper">
+                        <div class="text-center webview-loading" data-bind="visible: TokenAuthLoading">
+                            Loading...
+                        </div>
+
+                        <webview data-bind="attr: {src: TokenAuthUrl}" id="webview-control"></webview>
                     </div>
                 </div>
             </div>
