get gulp to work and add all libs because of it

--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width" initial-scale="1.0 " name="viewport" />
     <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/lib/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/lib/jquery.atwho/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/lib/jquery.atwho/css/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/site.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/icon.png" rel="icon" type="image/png">
 </head>
@@ -383,11 +383,11 @@
 <script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
 <script src="assets/lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="assets/lib/select2/js/select2.min.js"></script>
-<script src="assets/lib/socket.io/socket.io.min.js" type="text/javascript"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="assets/lib/underscore/underscore-min.js" type="text/javascript"></script>
 <script src="assets/lib/knockout/knockout.js" type="text/javascript"></script>
-<script src="assets/lib/jquery.caret/jquery.caret.min.js" type="text/javascript"></script>
-<script src="assets/lib/jquery.atwho/jquery.atwho.min.js" type="text/javascript"></script>
+<script src="assets/lib/jquery.caret/jquery.caret-1.5.2.min.js" type="text/javascript"></script>
+<script src="assets/lib/jquery.atwho/js/jquery.atwho.min.js" type="text/javascript"></script>
 <script src="assets/index.js" type="text/javascript"></script>
 </body>
 </html>
