--- a/OpenView/index.html
+++ b/OpenView/index.html
@@ -51,13 +51,7 @@
             <div class="row">
                 <div class="tab-content" data-bind="foreach: Channels">
                     <div class="tab-pane" data-bind="attr: {id: Name}, css: {active: Selected}">
-                        <!--<object bgcolor="#000000" data="//www-cdn.jtvnw.net/swflibs/TwitchPlayer.swf" height="{HEIGHT}" type="application/x-shockwave-flash" width="{WIDTH}">-->
-                            <!--<param name="allowFullScreen" value="true" />-->
-                            <!--<param name="allowNetworking" value="all" />-->
-                            <!--<param name="allowScriptAccess" value="always" />-->
-                            <!--<param name="movie" value="//www-cdn.jtvnw.net/swflibs/TwitchPlayer.swf" />-->
-                            <!--<param name="flashvars" value="channel={CHANNEL}&auto_play={AUTO_PLAY}&start_volume={VOLUME}" />-->
-                        <!--</object>-->
+                        <webview data-bind="attr:{src: EmbedUrl}" plugins></webview>
                     </div>
                 </div>
             </div>
@@ -96,7 +90,6 @@
 
         <script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
         <script src="assets/lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="assets/lib/select2/js/select2.min.js"></script>
         <script src="assets/lib/select2/js/select2.min.js"></script>
         <script src="assets/lib/underscore/underscore-min.js" type="text/javascript"></script>
         <script src="assets/lib/knockout/knockout.js" type="text/javascript"></script>
