--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -358,14 +358,25 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-condensed">
+                        <table class="table table-condensed" id="usersTable">
+                            <thead>
+                                <tr>
+                                    <th class="col-sm-6">
+                                        <span>User</span>
+                                    </th>
+                                    <th class="col-sm-6">
+                                        <span>Special</span>
+                                    </th>
+                                </tr>
+                            </thead>
+
                             <tbody data-bind="foreach: Users">
                                 <tr>
-                                    <td>
+                                    <td class="col-sm-6">
                                         <span data-bind="text: user"></span>
                                     </td>
-                                    <td>
-                                        <span data-bind="text: special"></span>
+                                    <td class="col-sm-6">
+                                        <span data-bind="text: type"></span>
                                     </td>
                                 </tr>
                             </tbody>
