--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -7,6 +7,7 @@
     <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/lib/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/lib/at.js/css/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/custom/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="assets/site.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/icon.png" rel="icon" type="image/png">
 </head>
@@ -358,29 +359,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-condensed" id="usersTable">
-                            <thead>
-                                <tr>
-                                    <th class="col-sm-6">
-                                        <span>User</span>
-                                    </th>
-                                    <th class="col-sm-6">
-                                        <span>Special</span>
-                                    </th>
-                                </tr>
-                            </thead>
-
-                            <tbody data-bind="foreach: Users">
-                                <tr>
-                                    <td class="col-sm-6">
-                                        <span data-bind="text: user"></span>
-                                    </td>
-                                    <td class="col-sm-6">
-                                        <span data-bind="text: type"></span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <table class="table table-condensed" id="usersTable"></table>
                     </div>
                 </div>
             </div>
@@ -399,6 +378,8 @@
 <script src="assets/lib/knockout/knockout.js" type="text/javascript"></script>
 <script src="assets/lib/caret.js/jquery.caret.min.js" type="text/javascript"></script>
 <script src="assets/lib/at.js/js/jquery.atwho.min.js" type="text/javascript"></script>
+<script src="assets/lib/datatables/js/jquery.dataTables.js" type="text/javascript"></script>
+<script src="assets/custom/dataTables.bootstrap.js" type="text/javascript"></script>
 <script src="assets/index.js" type="text/javascript"></script>
 </body>
 </html>
