--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -67,7 +67,7 @@
         <div class="tab-content" data-bind="foreach: Channels">
             <div class="tab-pane" data-bind="attr: {id: Name}, css: {active: Selected}">
                 <div data-bind="foreach: Comments">
-                    <div class="singleComment well well-sm" data-bind="click: showComment, css: HighlightColor">
+                    <div class="singleComment well well-sm" data-bind="click: showComment, css: {'highlight-background': HighlightColor}">
                         <span data-bind="text: Timestamp"></span>
                         <span data-bind="html: Badges"></span>
                         <strong data-bind="text: Name, style: {color: Color}"></strong>
