--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width" initial-scale="1.0 " name="viewport" />
     <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/lib/jquery.atwho/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/lib/at.js/css/jquery.atwho.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/site.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/icon.png" rel="icon" type="image/png">
 </head>
@@ -337,11 +337,13 @@
 
 <script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
 <script src="assets/lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/lib/socket.io/socket.io.min.js" type="text/javascript"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="assets/lib/underscore/underscore-min.js" type="text/javascript"></script>
 <script src="assets/lib/knockout/knockout.js" type="text/javascript"></script>
-<script src="assets/lib/jquery.caret/jquery.caret.min.js" type="text/javascript"></script>
-<script src="assets/lib/jquery.atwho/jquery.atwho.min.js" type="text/javascript"></script>
+<script src="assets/lib/caret.js/jquery.caret.min.js" type="text/javascript"></script>
+<script src="assets/lib/at.js/js/jquery.atwho.min.js" type="text/javascript"></script>
+<script src="assets/lib/datatables/js/jquery.dataTables.js" type="text/javascript"></script>
+<script src="assets/custom/dataTables.bootstrap.js" type="text/javascript"></script>
 <script src="assets/index.js" type="text/javascript"></script>
 </body>
 </html>
