make UI send the link to the `server` so that it can open the link

--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -152,7 +152,7 @@
                         <span data-bind="text: Timestamp"></span>
                         <span data-bind="html: Badges"></span>
                         <strong data-bind="text: Name, style: {color: Color}"></strong>
-                        <span data-bind="html: Message, style: {color: DetailColor}"></span>
+                        <span data-bind="html: Message, style: {color: DetailColor}" id="modalSingleComment"></span>
                     </div>
                 </div>
             </div>
