add gulp-babel to compile es6 -> es5, remove empty views, and fix es6 files

--- a/OpenMod.Angular/index.html
+++ b/OpenMod.Angular/index.html
@@ -1,21 +1,23 @@
 ﻿<html>
     <head>
-        <title>Angular 2 QuickStart</title>
+        <title>OpenMod</title>
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
         <!-- 1. Load libraries -->
-        <!-- IE required polyfill -->
-        <script src="../../node_modules/es6-shim/es6-shim.min.js"></script>
-        <script src="../../node_modules/angular2/bundles/angular2-polyfills.js"></script>
-        <script src="../../node_modules/rxjs/bundles/Rx.umd.js"></script>
-        <script src="../../node_modules/angular2/bundles/angular2-all.umd.js"></script>
+        <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+        <script src="node_modules/rxjs/bundles/Rx.umd.js"></script>
+        <script src="node_modules/angular2/bundles/angular2-all.umd.js"></script>
         <script src="app/app.component.js"></script>
         <script src="app/OpenMod.js"></script>
+        <script src="app/services/_services.js"></script>
+        <script src="app/services/_services.js.map"></script>
 
     </head>
 
     <!-- 3. Display the application -->
     <body>
+		http://www.html5rocks.com/en/tutorials/frameworks/angular-websockets/
+		
         <open-mod>
 
         </open-mod>
