add new gulp task(s) and move around some files

--- a/OpenMod.Angular/index.html
+++ b/OpenMod.Angular/index.html
@@ -4,19 +4,15 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
         <!--Angular2 libraries and dependencies-->
-        <script src="js/angular.min.js"></script>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="app/js/angular.min.js"></script>
+        <script src="app/js/jquery.min.js"></script>
+        <script src="app/js/bootstrap.min.js"></script>
 
         <!--OpenBot modules and components-->
-        <script src="app/register.js"></script>
-        <script src="app/OpenMod.js"></script>
+        <script src="app/scripts/app.min.js"></script>
 
-        <script src="app/components/Login.js"></script>
-        <script src="app/services/LoginService.js"></script>
-        <script src="app/services/SocketService.js"></script>
-
-        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <!--CSS and themes-->
+        <link href="app/css/bootstrap.min.css" rel="stylesheet" />
     </head>
 
     <!-- 3. Display the application -->
