--- a/OpenMod.Angular/index.html
+++ b/OpenMod.Angular/index.html
@@ -3,8 +3,9 @@
         <title>OpenMod</title>
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
-        <!--Angular2 libraries and dependencies-->
-        <script src="app/js/angular.min.js"></script>
+        <!--external libraries and dependencies-->
+        <!--Angular is already loaded, so no need to re-included here-->
+        <!--<script src="app/js/angular.min.js"></script>-->
         <script src="app/js/jquery.min.js"></script>
         <script src="app/js/bootstrap.min.js"></script>
 
