add socket.io, now everything is working!!!

--- a/OpenMod.Angular/index.html
+++ b/OpenMod.Angular/index.html
@@ -8,8 +8,8 @@
 
         <!--OpenBot modules and components-->
         <script src="app/scripts/app.min.js"></script>
-        <script src="app/scripts/ui-bootstrap-tpls.js"></script>
 
+        <!--Socket (required)-->
         <script src="/socket.io/socket.io.js"></script>
     </head>
 
