depend on ui.bootstrap and fix theme link

--- a/OpenMod.Angular/index.html
+++ b/OpenMod.Angular/index.html
@@ -4,7 +4,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <base href="/">
 
-        <link ng-href="app/themes/bootstrap-{{css.theme}}.css" rel="stylesheet" />
+        <link ng-href="app/themes/bootstrap-{{css.theme}}.min.css" rel="stylesheet" />
 
         <!--OpenBot modules and components-->
         <script src="app/scripts/app.min.js"></script>
