change ngRoute for ui.router, and update login page

--- a/OpenMod.Angular/index.html
+++ b/OpenMod.Angular/index.html
@@ -6,7 +6,7 @@
 
         <link ng-href="app/themes/bootstrap-{{css.theme}}.min.css" rel="stylesheet" />
 
-        <!--OpenBot modules and components-->
+        <!--OpenBot modules/components and dependencies-->
         <script src="app/scripts/app.min.js"></script>
 
         <!--Socket (required)-->
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div ng-view></div>
+                    <div ui-view></div>
                 </div>
             </div>
         </div>
